# Aiogramm_TG_BOT

./: bot.py  config.py  pyproject.toml
routers/: __init__.py  admin.py  media.py
routers/commands/: __init__.py  common.py
